fix: express routes shouldn't wrap lines

--- a/assets/css/solari/departure_destination.scss
+++ b/assets/css/solari/departure_destination.scss
@@ -4,6 +4,6 @@
   color: #171f26;
   display: inline-block;
   vertical-align: middle;
-  width: 554px;
+  width: 654px;
   font-size: 50px;
 }
