--- a/assets/css/solari/departure_time.scss
+++ b/assets/css/solari/departure_time.scss
@@ -5,6 +5,6 @@
   text-align: right;
   display: inline-block;
   vertical-align: middle;
-  width: 274px;
+  width: 174px;
   font-size: 50px;
 }
